0.3.6
--------------------------------------------------------
- 功能支持
  * 支持缓存列表填充验证时重写列表项验证逻辑
  * 支持缓存在 filter 阶段直接返回结果阻止发送请求


0.3.5   (2016-11-22)
--------------------------------------------------------
- BUG修复模块
  * 修正 IE8 下取 DOM 属性异常问题


0.3.4   (2016-11-16)
--------------------------------------------------------
- 功能支持
  * 支持缓存配置 type 属性

0.3.3   (2016-10-31)
--------------------------------------------------------
- 功能支持
  * 缓存基类支持 _$dump 静态接口
  * 支持 JSONP 接口调用

- BUG修复模块
  * cache 基类 __doSendRequest 接口判空逻辑调整
  * XDR 请求时针对字符串数据序列化的问题

0.3.2   (2016-10-12)
--------------------------------------------------------
- NEJ.define 注入增加 css 插件支持

0.3.1   (2016-08-27)
--------------------------------------------------------
- BUG修复模块
  * util/dispatcher/module 修复 regularModule init 参数
  * 删除文档中单页模块的 template 打包标记

0.3.0   (2016-07-18)
--------------------------------------------------------
- BUG修复模块
  * base/klass 清除无效条件判断
  * base/util string2object/object2string接口处理不合法URL异常
  * util/cache/list 清除请求队列异常
  * util/module/list 瀑布流列表分页问题
  * define.js 在head中引入的异常

- 功能支持
  * util/dispatcher/dispatcher 重定向时模块退出判断支持
  * util/dispatcher/module 模块构建时支持UMI配置参数

0.2.8   (2016-03-29)
0.2.7
--------------------------------------------------------
- 增加regularjs模块的支持
  * util/dispatcher/regularModule.js
- 功能增加
  * base/element 增加 _$getParent 接口
  * util/list/module 增加 _$nextPage,_$prevPage,_$pageTo 接口

0.2.6   (2015-09-07)
0.2.5
--------------------------------------------------------
- 兼容处理
  * define.js识别nej内敛函数判断条件调整，支持 NEJ.define和define函数
  * util/cache/cache兼容到nej.ut._$$Cache类名
  * util/dispatcher/module兼容到nej.ut._$$Module类名
  * 删除XDR请求回调中的try/catch，由应用逻辑自己保证批量请求的异常处理
  * util/sortable/sortable在mousemove事件中开始拖拽

0.2.4   (2015-01-20)
--------------------------------------------------------
- bug修正
  * 修正模块调度器在带flash的ie下标题出现hash串的问题
  * 修正在define.js之后内联非NEJ脚本的依赖异常

0.2.3
--------------------------------------------------------
- bug修正
  * 修正IE9下placeholder异常